# pytemp

./: .gitignore  Pipfile  README.md  fetch.py  options.py  parsers.py  pyproject.toml  pyvenv.cfg  requirements.txt
src/: smhi.py
src/weather/: __main__.py  constants.py  fetch.py  fetch_metar.py  fetch_smhi.py  fetch_station.py  news.py  nyt.py  options.py  parsers.py  smhi.py  stations.py  utils.py
