[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather"
dynamic = ["version"]
dependencies = [
  "requests",
]
requires-python = ">= 3"
description = "Fetch weather data"

[tool.hatch.version]
path = "src/weather/__main__.py"

[tool.hatch.build.targets.sdist]
include = ["src/weather"]

[tool.hatch.build.targets.wheel]
packages = ["src/weather"]

[project.scripts]
weather-cli = "weather:main"